updated config